highlight at nav items on mobile fix

--- a/css/temp.css
+++ b/css/temp.css
@@ -113,7 +113,7 @@ input {
 
 }
 .footer {
-     position: fixed;
+     /* position: fixed; */
      bottom: 0px;
      height: var(--footer-height);
      width: 100%;
@@ -144,8 +144,11 @@ input {
 /* ======== NAVBAR ============  */
 
 /* responsive menu  */
+
 .navbar-nav {
     background-color: var(--bg-primary);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     margin: 0px;
     box-shadow: 1px 0px 2px 2px rgba(75, 12, 12, 0.7);
 }
@@ -168,6 +171,12 @@ input {
     padding: 8px 6px;
     padding-left: 25px;
     margin: 0px;
+}
+@media (max-width: 950px) {
+    .navbar-nav .nav-item .nav-link{
+        cursor: default; 
+        outline: none;
+    }     
 }
 
 .nav-bar .navbar-collapse .navbar-nav {
